Fixed typo in functors lab

--- a/labs/lab-functors.tex
+++ b/labs/lab-functors.tex
@@ -1,7 +1,7 @@
 \section{Functors}
 \topics{Functors.}
 
-These exercises are about functors. We introduce you to a range of different types that are functors, in addition to those that you have seen in the lectures. Many of the types you will work with in these exercises may seem outright silly at this point. However, they we will continue to work with them in the coming weeks and you will see how they become increasingly more useful as we get to know more and more abstractions. As usual, you can obtain the skeleton code by cloning the respective repository from GitHub with the following command:
+These exercises are about functors. We introduce you to a range of different types that are functors, in addition to those that you have seen in the lectures. Many of the types you will work with in these exercises may seem outright silly at this point. However, we will continue to work with them in the coming weeks and you will see how they become increasingly more useful as we get to know more and more abstractions. As usual, you can obtain the skeleton code by cloning the respective repository from GitHub with the following command:
 \begin{minted}{bash}
 $ git clone https://github.com/fpclass/lab-functors
 \end{minted}
